--- a/python/S_Ch03_task.ipynb
+++ b/python/S_Ch03_task.ipynb
@@ -22,14 +22,19 @@
    "metadata": {},
    "source": [
     "<span style=\"font-size:80%\">[문제1]<br><br></span>\n",
-    "```인터프리트 방식에 대해 설명하고 2개 이상의 장점을 설명해주세요```"
+    "```주로 작성 중인 코드의 끝을 알리는 기호로 사용되며 파이썬에서 한 줄에 작성된 서로 다른 코드를 구분 지을 때 사용할 수 있는 기호를 골라주세요```\n",
+    "\n",
+    "1. ' , ' (쉼표)\n",
+    "2. ' + ' (더하기 기호)\n",
+    "3. ' ; ' (세미콜론)\n",
+    "4. ' / ' (슬래시)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\">답변</span>"
+    "<span style=\"color:red\">답변</span> :"
    ]
   },
   {
@@ -38,23 +43,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "디버깅이 용이하다,플랫폼에 구애받지 않는다"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "----"
    ]
   },
   {
@@ -62,7 +54,7 @@
    "metadata": {},
    "source": [
     "<span style=\"font-size:80%\">[문제2]<br><br></span>\n",
-    "```동적 타입 방식의 장점과 단점을 간략히 설명해주세요```"
+    "```Python의 PEP 8은 무엇인지 설명하고 PEP 8의 핵심적인 규칙을 1개 이상을 설명해주세요```"
    ]
   },
   {
@@ -78,23 +70,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "장점:개발속도향상 단점:성능문제"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "----"
    ]
   },
   {
@@ -102,7 +81,7 @@
    "metadata": {},
    "source": [
     "<span style=\"font-size:80%\">[문제3]<br><br></span>\n",
-    "```Python으로 정적타입 방식의 코드를 작성할 수 있는 방법을 구글링을 통해 검색 후 설명해주세요```"
+    "```Python에서 \"#\"이 의마하는 것은 무엇인지 설명해주세요```"
    ]
   },
   {
@@ -110,19 +89,6 @@
    "metadata": {},
    "source": [
     "<span style=\"color:red\">답변</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "타입 힌트"
    ]
   },
   {
@@ -134,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "----"
    ]
   },
   {
@@ -142,7 +108,7 @@
    "metadata": {},
    "source": [
     "<span style=\"font-size:80%\">[문제4]<br><br></span>\n",
-    "```프로세스와 스레드의 차이점을 설명해주세요```"
+    "```Python의 들여쓰기 장점과 기능에 대해 설명해주세요```"
    ]
   },
   {
@@ -158,23 +124,10 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "공유하고 있는 파일을 손상시키는 경우가 아니라면 아무런 영향을 주지 않는다."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "----"
    ]
   },
   {
@@ -182,7 +135,7 @@
    "metadata": {},
    "source": [
     "<span style=\"font-size:80%\">[문제5]<br><br></span>\n",
-    "```Python 2버전대와 3버전대의 차이를 성명해주세요```"
+    "```print( )문의 기능 및 특징에 대해 설명해주세요```"
    ]
   },
   {
@@ -201,49 +154,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "문법 차이"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"font-size:80%\">[문제6]<br><br></span>\n",
-    "```Python에서 메모리 관리는 어떻게 이루어지는지 설명해주세요```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\">답변</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "참조 카운팅"
-   ]
   },
   {
    "cell_type": "markdown",
