--- a/python/Ch04_task.ipynb
+++ b/python/Ch04_task.ipynb
@@ -22,32 +22,19 @@
    "metadata": {},
    "source": [
     "<span style=\"font-size:80%\">[문제1]<br><br></span>\n",
-    "```주로 작성 중인 코드의 끝을 알리는 기호로 사용되며 파이썬에서 한 줄에 작성된 서로 다른 코드를 구분 지을 때 사용할 수 있는 기호를 골라주세요```\n",
+    "```다음 중 14 % 3의 계산 결과로 옳은 것을 고르세요```\n",
     "\n",
-    "1. ' , ' (쉼표)\n",
-    "2. ' + ' (더하기 기호)\n",
-    "3. ' ; ' (세미콜론)\n",
-    "4. ' / ' (슬래시)"
+    "1. 4\n",
+    "2. 4.6\n",
+    "3. 2\n",
+    "4. 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"color:red\">답변</span> :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "3"
+    "<span style=\"color:red\">답변</span>"
    ]
   },
   {
@@ -67,48 +54,12 @@
    "metadata": {},
    "source": [
     "<span style=\"font-size:80%\">[문제2]<br><br></span>\n",
-    "```Python의 PEP 8은 무엇인지 설명하고 PEP 8의 핵심적인 규칙을 1개 이상을 설명해주세요```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:red\">답변</span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "PEP20이 파이썬이 추구하는 첧학에 대한것이라면 PEP8은 그것을 실현하기 위한 방법이다\n",
-    "PEP 8의 핵심적인 규칙 중 한가지는 들여쓰기 입니다."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"font-size:80%\">[문제3]<br><br></span>\n",
-    "```Python에서 \"#\"이 의마하는 것은 무엇인지 설명해주세요```"
+    "```다음 중 올바르지 않은 것을 고르세요```\n",
+    "\n",
+    "1. float(17//3)\n",
+    "2. int(10)-9\n",
+    "3. float11/2\n",
+    "4. float(10)-2"
    ]
   },
   {
@@ -131,24 +82,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "주석을 나타낸다"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"font-size:80%\">[문제4]<br><br></span>\n",
-    "```Python의 들여쓰기 장점과 기능에 대해 설명해주세요```"
+    "[문제3]<br><br>\n",
+    "다음 계산식의 결괏값을 골라주세요\n",
+    "\n",
+    "(3 * 7 - 16) / 2 - 1"
    ]
   },
   {
@@ -164,17 +104,36 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "코드의 구조를 결정하는 역할"
+    "----"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[문제4]<br><br>\n",
+    "거듭제곱을 올바르게 표현한 식을 골라주세요\n",
+    "\n",
+    "1. 2 ^^ 3\n",
+    "2. 2 ** 3\n",
+    "3. 2 ^* 3\n",
+    "4. 2 ~~ 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:red\">답변</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -187,8 +146,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style=\"font-size:80%\">[문제5]<br><br></span>\n",
-    "```print( )문의 기능 및 특징에 대해 설명해주세요```"
+    "[문제5]<br><br>\n",
+    "목과 나머지를 함께 구하기 위해 사용할 수 있는 표현을 골라주세요\n",
+    "\n",
+    "1. //\n",
+    "2. divmod()\n",
+    "3. %\n",
+    "4. /"
    ]
   },
   {
@@ -196,19 +160,6 @@
    "metadata": {},
    "source": [
     "<span style=\"color:red\">답변</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print() 함수는 파이썬에서 주로 변수, 텍스트, 데이터 등을 콘솔에 출력할 때 사용됩니다."
    ]
   },
   {
