--- a/python/Ch10_task.ipynb
+++ b/python/Ch10_task.ipynb
@@ -37,7 +37,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "average = sum(x) / len(x)\n",
+    "print(\"평균:\",average)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +73,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1,5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,6 +104,19 @@
    "metadata": {},
    "source": [
     "<span style=\"color:red\">답변</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "2,5"
    ]
   },
   {
@@ -135,6 +153,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -165,6 +196,19 @@
    "metadata": {},
    "source": [
     "<span style=\"color:red\">답변</span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "4"
    ]
   },
   {
